clean up Random tab, update jQuery code to use on() instead of live()

--- a/css/admin.css
+++ b/css/admin.css
@@ -220,6 +220,9 @@
 .cf-kuler-paging.next {
 	float: right;
 }
+.cf-kuler-paging.center {
+	margin-left: 45%;
+}
 .kuler-credit {
 	margin-top: 1em;
 	float: right;
